# MLOps_2025

./: .gcloudignore  .gitignore  LICENSE  README.md  cloudbuild_backend.yaml  cloudbuild_datadrift.yaml  cloudbuild_frontend.yaml  data.dvc  models.dvc  pokemon_labels.json  pyproject.toml  requirements.txt  requirements_backend.txt  requirements_datadrift.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: cml_workflow.yaml  codecheck.yaml  datadrift_workflow.yaml  pre_commit.yaml  tests.yaml  tests_and_deployment.yaml
configs/: cloudbuild_backend.yaml  cloudbuild_datadrift.yaml  cloudbuild_frontend.yaml  sweep.yaml
dockerfiles/: api.dockerfile  backend.dockerfile  datadrift.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.py
src/pokedec/: backend.py  data.py  data_drift.py  data_statistics.py  evaluate.py  frontend.py  model.py  train.py
tests/: test_data.py  test_model.py
tests/integration/: test_api.py
tests/performance/: locust_backend.py
tests/tests_data/: dummy_test_file.txt
tests/unit/: test_api_helper_functions.py  test_data.py  test_model.py
