[project]
name = "pokedec"
version = "0.0.1"
description = "This package can detect pokemon types based on images."
authors = [
  { name = "antonmosquerastorgaard@gmail.com", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "coverage>=7.6.10",
    "dvc>=3.59.0",
    "dvc-gs>=3.0.1",
    "invoke>=2.2.0",
    "loguru>=0.7.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "timm>=1.0.13",
    "torch>=2.5.1",
]

[tool.ruff]
line-length = 120
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "wandb>=0.19.3",
]
