[project]
name = "pokedec"
version = "0.0.1"
description = "This package can detect pokemon types based on images."
readme = "README.md"
keywords = [
  "machine learning",
  "MLOps",
]
license = { file = "LICENSE" }
authors = [
  { name = "Osquera", email = "antonmosquerastorgaard@gmail.com" },
]
requires-python = "==3.12.*"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "coverage>=7.6.10",
  "dvc>=3.59",
  "dvc-gs>=3.0.1",
  "invoke>=2.2",
  "loguru>=0.7.3",
  "numpy>=2.2.1",
  "pandas>=2.2.3",
  "pytest>=8.3.4",
  "timm>=1.0.13",
  "torch>=2.5.1",
  "typer>=0.15.1",
]

[tool.ruff]
line-length = 120
select = ["I"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

# TODO: Create dependencies for all workflows and dockerfiles and cloudbuilds

[tool.coverage.run]
omit = ["tests/*", "*/_remote_module_non_scriptable.py"]
branch = true
source = ["pokedec"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "wandb>=0.19.3",
]
