[project]
name = "pokedec"
version = "0.0.1"
description = "This package can detect pokemon types based on images."
readme = "README.md"
keywords = [
  "machine learning",
  "MLOps",
]
license = { file = "LICENSE" }
authors = [
  { name = "Osquera", email = "antonmosquerastorgaard@gmail.com" },
]
requires-python = "==3.12.*"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anyio>=4.8",
  "coverage>=7.6.10",
  "dvc>=3.59",
  "dvc-gs>=3.0.1",
  "fastapi>=0.115.7",
  "google-cloud-run>=0.10.14",
  "httpx>=0.28.1",
  "invoke>=2.2",
  "loguru>=0.7.3",
  "numpy>=2.2.1",
  "onnxruntime>=1.20.1",
  "pandas>=2.2.3",
  "pytest>=8.3.4",
  "python-multipart>=0.0.20",
  "streamlit>=1.41.1",
  "timm>=1.0.13",
  "torch>=2.5.1",
  "typer>=0.15.1",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  ".", "src/pokedec",
]

# TODO: Create dependencies for all workflows and dockerfiles and cloudbuilds

[tool.coverage.run]
omit = ["tests/*", "*/_remote_module_non_scriptable.py", "src/pokedec/frontend.py"]
branch = true
source = ["src/pokedec"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "wandb>=0.19.3",
]
